fix: sec overflow hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,6 @@ nav.menu ul.list_menu li.has_submenu:hover ul.submenu{
 
 .sec-hero{
     background-color: var(--color-gray);
-    overflow: hidden;
 }
 .hero_top{
     height: 560px;
@@ -819,6 +818,9 @@ footer.footer{
     .footer_bottom{
         padding-top: 0;
         justify-content: center;
+    }
+    .sec-hero{
+        overflow-x: hidden;
     }
 }
 
